safari mobile footer overlap fix-attempt

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: dimgrey;
     font-size: 10px;
     overflow: hidden;
